--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,5 +1,23 @@
 <html>
+<head>
+<script type="text/javascript" src="js/jquery-2.2.2.js"></script>
+<script type="text/javascript" src="js/jquery-rest.js"></script>
+</head>
+
+<script type="text/javascript">
+function test(){
+	$.restPost({
+		  url: 'rest/flow/add',
+		  data: {'flowName':'abcd'},
+		  success: function(data){
+			  alert("ok");
+		  }
+		});
+}
+</script>
 <body>
 <h2>Hello World!</h2>
+
+<button onClick="test()">abc</button>
 </body>
 </html>
